--- a/.env
+++ b/.env
@@ -5,12 +5,12 @@ PORT=5678
 N8N_ENCRYPTION_KEY=CHANGE_THIS_TO_A_SECURE_RANDOM_STRING
 
 # URL Configuration - Update these to your actual domain
-WEBHOOK_URL=https://your-n8n-app.onrender.com/
+WEBHOOK_URL=https://n8n-1bx2.onrender.com
 VUE_APP_URL_BASE_API=https://your-n8n-app.onrender.com/
 
 # Timezone Configuration
-GENERIC_TIMEZONE=America/Sao_Paulo
-TZ=America/Sao_Paulo
+GENERIC_TIMEZONE=Europe/Madrid
+TZ=Europe/Madrid
 
 # Logging
 N8N_LOG_LEVEL=info
