Add supabase database

--- a/render.yaml
+++ b/render.yaml
@@ -2,34 +2,24 @@ services:
   - type: web
     name: n8n
     env: docker
-    region: oregon # optional (defaults to oregon)
-    plan: standard # optional (defaults to starter)
-    branch: main # optional (defaults to master)
+    region: oregon
+    plan: standard
+    branch: main
     numInstances: 1
     healthCheckPath: /
     envVars:
       - key: DB_TYPE
         value: postgresdb
       - key: DB_POSTGRESDB_HOST
-        fromDatabase:
-          name: n8n-db
-          property: host
-      - key: DB_POSTGRESDB_DATABASE
-        fromDatabase:
-          name: n8n-db
-          property: database
+        value: db.riokegjfknyvycmifrqv.supabase.co
       - key: DB_POSTGRESDB_PORT
-        fromDatabase:
-          name: n8n-db
-          property: port
+        value: 5432
+      - key: DB_POSTGRESDB_DATABASE
+        value: postgres
       - key: DB_POSTGRESDB_USER
-        fromDatabase:
-          name: n8n-db
-          property: user
+        value: postgres
       - key: DB_POSTGRESDB_PASSWORD
-        fromDatabase:
-          name: n8n-db
-          property: password
+        value: DkaLQN64lT99OS7O
       - key: DB_POSTGRESDB_SCHEMA
         value: public
       - key: WEBHOOK_URL
@@ -58,7 +48,3 @@ services:
       name: n8n-disk
       mountPath: /home/node/.n8n
       sizeGB: 5
-
-databases:
-  - name: n8n-db
-    plan: basic-1gb
