--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=5678
 
 # Security - IMPORTANT: Generate a strong encryption key
-N8N_ENCRYPTION_KEY=CHANGE_THIS_TO_A_SECURE_RANDOM_STRING
+N8N_ENCRYPTION_KEY=w8r#LcM7Fx2!qnK93zJv@XksZtL1c*RY
 
 # URL Configuration - Update these to your actual domain
 WEBHOOK_URL=https://n8n-1bx2.onrender.com
