add docker compose

--- a/.env
+++ b/.env
@@ -1,36 +1,27 @@
-# Port configuration
-PORT=5678
-
-# Security - IMPORTANT: Generate a strong encryption key
-N8N_ENCRYPTION_KEY=w8r#LcM7Fx2!qnK93zJv@XksZtL1c*RY
-
-# URL Configuration - Update these to your actual domain
-WEBHOOK_URL=https://n8n-1bx2.onrender.com
-VUE_APP_URL_BASE_API=https://your-n8n-app.onrender.com/
-
-# Timezone Configuration
-GENERIC_TIMEZONE=Europe/Madrid
-TZ=Europe/Madrid
-
-# Logging
-N8N_LOG_LEVEL=info
-
-# Database Configuration (Auto-populated by Render)
+DB_POSTGRESDB_DATABASE=postgres
+DB_POSTGRESDB_HOST=aws-1-us-east-2.pooler.supabase.com
+DB_POSTGRESDB_PASSWORD=W0u0lvLEIOlIIH8z
+DB_POSTGRESDB_PORT=5432
+DB_POSTGRESDB_SSL_ENABLED=true
+DB_POSTGRESDB_SSL_REJECT_UNAUTHORIZED=false
+DB_POSTGRESDB_USER=postgres.egveyjmlqzdzhvsppqni
 DB_TYPE=postgresdb
-DB_POSTGRESDB_DATABASE=$POSTGRES_DATABASE
-DB_POSTGRESDB_HOST=$POSTGRES_HOST
-DB_POSTGRESDB_PORT=$POSTGRES_PORT
-DB_POSTGRESDB_USER=$POSTGRES_USER
-DB_POSTGRESDB_SCHEMA=public
-DB_POSTGRESDB_PASSWORD=$POSTGRES_PASSWORD
-
-# Execution Settings - Optimized for production
-EXECUTIONS_DATA_PRUNE=true
+EMAIL_ADDRESS_JOE=softem.dev@gmail.com
 EXECUTIONS_DATA_MAX_AGE=168
-EXECUTIONS_DATA_SAVE_ON_ERROR=all
-EXECUTIONS_DATA_SAVE_ON_SUCCESS=none
-EXECUTIONS_DATA_SAVE_ON_PROGRESS=false
+EXECUTIONS_DATA_PRUNE=true
 EXECUTIONS_DATA_SAVE_MANUAL_EXECUTIONS=false
-
-# Performance Settings
+EXECUTIONS_DATA_SAVE_ON_ERROR=all
+EXECUTIONS_DATA_SAVE_ON_PROGRESS=false
+EXECUTIONS_DATA_SAVE_ON_SUCCESS=none
+GENERIC_TIMEZONE=Europe/Madrid
+IMGBB_API_KEY=93ad3031180727de3f94c82dee4cd1c9
+N8N_ENCRYPTION_KEY="w8r#LcM7Fx2!qnK93zJv@XksZtL1c*RY"
+N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
+N8N_LOG_LEVEL=info
 N8N_METRICS=true
+N8N_RUNNERS_ENABLED=true
+N8N_RUNNERS_HEARTBEAT_INTERVAL=75
+PORT=5678
+TELEGRAM_CHAT_ID=532415410
+TZ=Europe/Madrid
+WEBHOOK_URL=https://n8n-1bx2.onrender.com
